--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,4 +17,8 @@ body{
 }
 
 /* Header */
-
+#header .card{
+    background-image: url(../img/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
