--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,3 +22,9 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
 }
+
+/* Empresas */
+
+#carouselExampleCaptions .carousel-item{
+   text-align: center;
+}
