Form and footer base structure + fix header text + add navbar links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,3 +28,10 @@ body{
 #carouselExampleCaptions .carousel-item{
    text-align: center;
 }
+
+/* Formulario */
+
+#contact .btn:hover {
+    color: #f7f3f3;
+    background-color: rgb(57, 59, 59);
+}
