--- a/assets/css/style-cv.css
+++ b/assets/css/style-cv.css
@@ -3,10 +3,10 @@ body{
     box-sizing: border-box;
 }
 
-.header img{
+.main img{
     width: 15em;
 }
 
 .footer .fa-brands:hover {
-    color: #e6a8d0;
+    color: #262626;
 }
